cmake_minimum_required(VERSION 3.0)
project(qt5helloworld)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Svg REQUIRED)
add_executable(qt5helloworld WIN32 main.cpp mainwindow.cpp)
target_link_libraries(qt5helloworld Qt5::Widgets Qt5::Gui Qt5::Svg)
